infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    #allows for usage of regular expressions in path expression
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          #paths below are ordered from most important to least important
          #so last path for react app will get matched only after trying to match the others above in descending order
          - path: /posts/create
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend: 
              serviceName: query-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments   
                        #  ?(.*) above is regex for wildcard (can't use ':id' here like used in index.js codebase)
            backend: 
              serviceName: comments-srv
              servicePort: 4001
          - path: /?(.*)
              #since this path is related to react app which likely used route handling, want to account for all pages by using regex for wildcard here too 
            backend:
                serviceName: client-srv
                servicePort: 3000
